--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(agimus-vision)
+project(agimus_vision)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
@@ -7,6 +7,7 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   roslib
+  message_generation
   cv_bridge
   visp_bridge
   std_msgs
@@ -15,22 +16,36 @@ find_package(catkin REQUIRED COMPONENTS
   tf
 )
 
+find_package(OpenCV REQUIRED)
+
 find_package(VISP REQUIRED)
 
 find_package(LibXml2 REQUIRED)
 
 
-catkin_package()
+add_service_files(
+  FILES
+  EmptyService.srv
+)
 
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
+
+
+catkin_package()
 
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
+  ${OPENCV_INCLUDE_DIRS}
   ${VISP_INCLUDE_DIRS}
   ${LibXml2_INCLUDE_DIRS}
 )
 
-add_subdirectory(src/tracker_box)
+add_subdirectory(src/tracker_object)
+add_subdirectory(src/extrinsic_calibration)
 
 ## Mark cpp header files for installation
 install(DIRECTORY include
