--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>agimus-vision</name>
+  <name>agimus_vision</name>
   <version>0.1.0</version>
-  <description>The agimus-vision package</description>
+  <description>The agimus_vision package</description>
   <maintainer email="anicolin@laas.fr">Alexis Nicolin</maintainer>
   <license>BSD-2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>message_generation</build_depend>
   <build_depend>visp</build_depend>
   <build_depend>xml2</build_depend>
   <build_depend>roscpp</build_depend>
@@ -17,6 +18,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>
 
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
