--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>visp_bridge</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>
