--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,4 +71,7 @@ install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+catkin_install_python(PROGRAMS scripts/simulate.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 SETUP_PROJECT_FINALIZE()
