Corrected cmake and linkage error caused by visp

--- a/src/tracker_object/CMakeLists.txt
+++ b/src/tracker_object/CMakeLists.txt
@@ -6,7 +6,8 @@ target_link_libraries(${PROJECT_NAME}_tracker_object
   zbar # Necessary when the detectors are not used via pointers.
 )
 
-PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME}_tracker_object visp)
+message(${OpenCV_LIBS})
+
 set_target_properties(${PROJECT_NAME}_tracker_object PROPERTIES OUTPUT_NAME tracker_object PREFIX "")
 
 
