Added publisher for the estimated hand poses
Added publisher using calibration data and visual information from the
apriltags on the hand to compute the pose of each hand and send it to TF.

Added a script to calibrate those data.

Tests done, works as expected.
TODO: Documentation, unit and full script tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,11 @@ install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-catkin_install_python(PROGRAMS scripts/simulate.py
+install(DIRECTORY data
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
+catkin_install_python(PROGRAMS scripts/simulate.py scripts/calibrate_real_joint.py scripts/publish_real_joint.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 SETUP_PROJECT_FINALIZE()
