--- a/src/tracker_object/CMakeLists.txt
+++ b/src/tracker_object/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_executable(${PROJECT_NAME}_tracker_object main.cpp node.cpp detector.cpp detector_apriltag.cpp detector_chessboard.cpp) 
 add_dependencies(${PROJECT_NAME}_tracker_object ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_include_directories(${PROJECT_NAME}_tracker_object SYSTEM PUBLIC
+  ${catkin_INCLUDE_DIRS}
+  ${OPENCV_INCLUDE_DIRS}
+)
+
 target_link_libraries(${PROJECT_NAME}_tracker_object
   ${catkin_LIBRARIES}
   ${OpenCV_LIBS}
