--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ catkin_package()
 
 add_subdirectory(src/tracker_object)
 ##add_subdirectory(src/extrinsic_calibration)
+add_subdirectory(tests)
 
 SET(${PROJECT_NAME}_HEADERS
   include/agimus_vision/extrinsic_calibration/extrinsic_calibration.hpp
