--- a/package.xml
+++ b/package.xml
@@ -27,4 +27,6 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
 
+  <depend>dynamic_reconfigure</depend>
+
 </package>
