--- a/package.xml
+++ b/package.xml
@@ -20,13 +20,15 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>cv_bridge</build_depend>
 
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-
+  <exec_depend>visp_bridge</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
   <depend>dynamic_reconfigure</depend>
 
 </package>
